# BackToTheFuture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: run_binary.sh
src/: CMakeLists.txt  main.cpp
src/archiveUtils/: CMakeLists.txt  Compress.cpp  Compress.hpp  Decompress.cpp  Decompress.hpp
src/backToTheFutureLib/: CMakeLists.txt  backToTheFutureLib.cpp  backToTheFutureLib.hpp
test/: CMakeLists.txt
test/src/: decompressTest.cpp
